chore(testing): setup jest for testing
- install jest and enzyme, and and include the configuration code
- write a sample test and ensure it’s passing

[Finishes #164139636]

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -136,6 +136,12 @@
       {
         "forbid": []
       }
+    ],
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": true
+      }
     ]
   }
 }
