chore(travis): integrate travis for continuous build
- go to travis.org, click on the ‘+’ to add the ireporter-react repository
- crete he .travis.yml file and include the configuration settings
- include the url for the build badge in README.md

[Finishes #165165452]

--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "start:prod": "node server.js",
     "start": "node server.js",
     "webpack": "webpack",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage --colors",
     "lint": "eslint . --ext .js,.jsx && npm run sass-lint",
     "lint-n-fix": "eslint --fix . --ext .js,.jsx && npm run sass-lint",
-    "sass-lint": "sass-lint 'src/**/*.scss' -q -v"
+    "sass-lint": "sass-lint 'src/**/*.scss' -q -v",
+      "test": "jest",
+      "test:watch": "jest --watch",
+      "test:coverage": "npm run coverage",
+      "coverage": "jest --coverage --colors"
   },
   "dependencies": {
     "autoprefixer": "^9.5.0",
