chore(auto-deploy) setup auto deploy of staging branch to heroku
- create create the app on heroku and set it to deploy from the staging branch
- create staging branch from develop
- update package.json with the build scripts

[Finishes #165168834]

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "url": "https://github.com/chingsley/ireporter-react/issues"
   },
   "homepage": "https://github.com/chingsley/ireporter-react#readme",
+  "heroku_link": "https://chingsley-ireporter-react.herokuapp.com/",
   "pre-commit": [
     "lint",
     "test"
