--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,8 @@
     "@babel/preset-react"
   ],
   "plugins": [
-    "transform-object-rest-spread"
+    "transform-class-properties",
+    "transform-object-rest-spread",
+    ["@babel/plugin-transform-runtime", { "regenerator": true } ]
   ]
 }
