--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "autoprefixer": "^9.5.0",
+    "axios": "^0.18.0",
     "express": "^4.16.4",
     "html-webpack-plugin": "^3.2.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
@@ -51,6 +52,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
+    "@babel/plugin-transform-runtime": "^7.4.3",
     "@babel/polyfill": "^7.4.0",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-es2015": "^7.0.0-beta.53",
@@ -58,6 +60,7 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.5.0",
     "babel-loader": "^8.0.5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
