--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^16.8.6",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
+    "react-toastify": "^5.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
