--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "webpack": "webpack",
     "lint": "eslint . --ext .js,.jsx && npm run sass-lint",
     "sass-lint": "sass-lint 'src/**/*.scss' -q -v",
+    "sass-lint:fix": "sass-lint-auto-fix",
     "lint:fix": "eslint --fix . --ext .js,.jsx && npm run sass-lint",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -40,6 +41,7 @@
     "autoprefixer": "^9.5.0",
     "axios": "^0.18.0",
     "express": "^4.16.4",
+    "google-maps-react": "^2.0.2",
     "html-webpack-plugin": "^3.2.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "path": "^0.12.7",
@@ -80,6 +82,7 @@
     "react-hot-loader": "^4.8.2",
     "sass": "^1.17.4",
     "sass-lint": "^1.12.1",
+    "sass-lint-auto-fix": "^0.17.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
