--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,7 @@
   ],
   "plugins": [
     "transform-class-properties",
-    "transform-object-rest-spread",
+    "@babel/plugin-proposal-object-rest-spread",
     ["@babel/plugin-transform-runtime", { "regenerator": true } ]
   ]
 }
