--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: node_js
 node_js:
-  - 'stable'
+  - '8.11.1'
 cache:
   directories:
     - node_modules
 script:
-  - npm run test:coverage
+  - npm run test
