--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,16 @@
     "node": true
   },
   "rules": {
-    "import/no-extraneous-dependencies": 0
+    "import/no-extraneous-dependencies": 0,
+    "import/no-named-as-default": 0,
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [
+          ".js",
+          ".jsx"
+        ]
+      }
+    ]
   }
 }
