--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "sass-lint": "sass-lint 'src/**/*.scss' -q -v",
     "sass-lint:fix": "sass-lint-auto-fix",
     "lint:fix": "eslint --fix . --ext .js,.jsx && npm run sass-lint",
-    "test": "jest --coverage && cat ./coverage/lcov.info | coveralls",
+    "test": "jest --coverage --updateSnapshot && cat ./coverage/lcov.info | coveralls",
     "test:dev": "jest --coverage --updateSnapshot",
     "test:watch": "jest --watch",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
@@ -41,6 +41,7 @@
     "autoprefixer": "^9.5.0",
     "axios": "^0.18.0",
     "enzyme-adapter-react-16": "^1.11.2",
+    "enzyme-to-json": "^3.3.5",
     "express": "^4.16.4",
     "google-maps-react": "^2.0.2",
     "html-webpack-plugin": "^3.2.0",
@@ -52,6 +53,7 @@
     "react-router-dom": "^5.0.0",
     "react-toastify": "^5.0.1",
     "redux": "^4.0.1",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
