ft(mvp design): ensure all pages contain the basic components
- create all required pages
- Style the homepage

[Delivers #165660137]

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "test"
   ],
   "scripts": {
-    "preinstallcmd": "rm -rf dist",
-    "postinstallcmd": "npm run build",
+    "preinstall": "rm -rf dist",
+    "postinstall": "npm run build",
     "build": "npm run build:prod",
     "build:dev": "webpack --env.mode development --open --hot",
     "build:prod": "webpack --env.mode production",
