feat(get all user reports): fetch and display all reports belonging to a logged in user
- Make the api call to fetch all user reports
- display reports on the ‘my reports’ page for the user

[Delivers #164040728]

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "start:prod": "node server.js",
     "start": "node server.js",
     "webpack": "webpack",
-    "lint": "eslint . --ext .js,.jsx && npm run sass-lint",
+    "lint": "eslint . --ext .js,.jsx",
     "sass-lint": "sass-lint 'src/**/*.scss' -q -v",
     "sass-lint:fix": "sass-lint-auto-fix",
     "lint:fix": "eslint --fix . --ext .js,.jsx && npm run sass-lint",
