--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,11 @@
   "rules": {
     "import/no-extraneous-dependencies": 0,
     "import/no-named-as-default": 0,
+    "no-return-assign": 0,
+    "jsx-a11y/label-has-for": 0,
+    "jsx-a11y/label-has-associated-control": 0,
+    "react/no-unused-state": 0,
+    "eslint(jsx-a11y/no-static-element-interactions)": 0,
     "react/jsx-filename-extension": [
       1,
       {
