--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "axios": "^0.18.0",
     "enzyme-adapter-react-16": "^1.11.2",
     "enzyme-to-json": "^3.3.5",
+    "event-emitter": "^0.3.5",
     "express": "^4.16.4",
     "google-maps-react": "^2.0.2",
     "html-webpack-plugin": "^3.2.0",
@@ -55,7 +56,8 @@
     "react-toastify": "^5.0.1",
     "redux": "^4.0.1",
     "redux-mock-store": "^1.5.3",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
