--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "autoprefixer": "^9.5.0",
     "axios": "^0.18.0",
+    "axios-mock-adapter": "^1.16.0",
     "enzyme-adapter-react-16": "^1.11.2",
     "enzyme-to-json": "^3.3.5",
     "event-emitter": "^0.3.5",
@@ -55,7 +56,6 @@
     "react-router-dom": "^5.0.0",
     "react-toastify": "^5.0.1",
     "redux": "^4.0.1",
-    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.2.0"
   },
@@ -88,6 +88,7 @@
     "nyc": "^14.0.0",
     "pre-commit": "^1.2.2",
     "react-hot-loader": "^4.8.2",
+    "redux-mock-store": "^1.5.3",
     "sass": "^1.17.4",
     "sass-lint": "^1.12.1",
     "sass-lint-auto-fix": "^0.17.0",
