--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
+    "@google/maps": "^0.5.5",
     "autoprefixer": "^9.5.0",
     "axios": "^0.18.0",
     "axios-mock-adapter": "^1.16.0",
